# fastapi-clean-architecture

./: .dockerignore  .env-example  .gitignore  CHANGELOG.md  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  entrypoint.sh  logger.yaml  loki-config.yml  promtail-config.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/actions/setup-project/: action.yaml
.github/workflows/: main.yaml  release.yaml
alembic/: env.py
alembic/versions/: 1cd378287ca4_.py  3cd3847f0ecc_.py  aedd18a7577d_initial_schema.py  b9427b47082b_.py
app/: main.py
app/api/v1/: routes.py
app/api/v1/endpoints/: admin.py  auth.py  costs.py  health.py  kafka.py  two_factor.py  user.py
app/core/: config.py  dependencies.py  execeptions.py  limiter.py  logger.py  redis.py
app/db/: create_default.py  database.py  init_db.py  seed.py
app/helpers/: producer.py  redis.py
app/middlewares/: cors_middleware.py
app/models/: __init__.py  costs.py  health.py  user.py
app/repository/: __init__.py  cost.py  health.py  kafka.py  user.py
app/schemas/: auth.py  costs.py  health.py  kafka.py  two_factor.py  user.py
app/services/: auth_service.py  consumer_service.py  cost_service.py  email_service.py  health_service.py  rate_limiter_service.py  two_factor_service.py  user_service.py
app/utils/: utils.py
app/views/: admin.py  auth.py  costs.py  health.py  kafka.py  users.py
nginx/: nginx.conf.template
nginx/errors/: error_401.html  error_404.html  error_50x.html
tests/: test_user.py
