[project]
name = "fastapi-clean-architecture"
description = "Base FastAPI project for applying general RestAPI Application cases, built with clean architecture, best practices, and clean code."
version = "0.3.0"
requires-python = ">=3.12"

dependencies = [
  "fastapi==0.135.3",
  "uvicorn==0.44.0",
  "SQLAlchemy==2.0.49",
  "sqlmodel==0.0.38",
  "pydantic==2.13.0",
  "pydantic-settings==2.13.1",
  "pydantic[email]",
  "python-multipart==0.0.26",
  "pyaml==26.2.1",
  "slowapi==0.1.9",
  "alembic==1.18.4",
  "python-dotenv",
  "psycopg[binary]==3.3.3",
  "PyJWT==2.12.1",
  "pwdlib[argon2]",
  "cryptography==46.0.7",
  "redis==7.4.0",
  "rq==2.7.0",
  "aiokafka==0.13.0",
  "pyotp==2.9.0",
  "qrcode==8.2",
]

[project.optional-dependencies]
dev = [
  "psycopg2-binary",
  "pytest",
  "pytest-mock==3.15.1",
  "pytest-asyncio==1.3.0",
  "pytest-cov",
  "pylint==4.0.5",
  "ruff==0.15.10",
  "httpx==0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=app --cov-report=term-missing"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = [
  "E501",
]

fixable = ["ALL"]
unfixable = []

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
