[project]
name = "fastapi-clean-architecture"
description = "Base FastAPI project for applying general RestAPI Application cases, built with clean architecture, best practices, and clean code."
version = "0.3.0"
requires-python = ">=3.12"

dependencies = [
  "fastapi==0.138.2",
  "uvicorn==0.49.0",
  "SQLAlchemy==2.0.51",
  "sqlmodel==0.0.39",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "pydantic[email]",
  "python-multipart==0.0.32",
  "pyaml==26.2.1",
  "slowapi==0.1.10",
  "alembic==1.18.5",
  "python-dotenv",
  "psycopg[binary]==3.3.4",
  "PyJWT==2.13.0",
  "pwdlib[argon2]",
  "cryptography==49.0.0",
  "redis==8.0.1",
  "rq==2.10.0",
  "aiokafka==0.14.0",
  "pyotp==2.10.0",
  "qrcode==8.2",
]

[project.optional-dependencies]
dev = [
  "psycopg2-binary",
  "pytest",
  "pytest-mock==3.15.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov",
  "pylint==4.0.6",
  "ruff==0.15.20",
  "httpx==0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=app --cov-report=term-missing"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = [
  "E501",
]

fixable = ["ALL"]
unfixable = []

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
